--- a/index.html
+++ b/index.html
@@ -60,59 +60,60 @@
 
 
 
+
 <!-- my group campaign Section -->
 <section id="tree-planting-overview">
     <div class="container">
         <h2>Recent Tree Planting group Overview</h2>
 
-        <!-- Overview Content Block -->
-        <p>We planted mangrove trees as part of our environmental conservation initiative, The variety we selected was the <a href="https://en.wikipedia.org/wiki/Rhizophora_mangle" target="_blank">Red Mangrove</a>, known for its ability to thrive in coastal areas with saline conditions.</p>
+        <p>We planted mangrove trees as part of our environmental conservation initiative. The variety we selected was the
+            <a href="https://en.wikipedia.org/wiki/Rhizophora_mangle" target="_blank">Red Mangrove</a>, known for its ability to thrive in coastal areas with saline conditions.
+        </p>
 
         <div class="overview-blocks">
             <div class="overview-content">
                 <h3>Location of Planting</h3>
-                <div class="tree-planting-photo">
-                    <img src="treePlanting/area.jpg" alt="Planting location">
-                    <p>Planting area for mangrove trees in Bidesi park shoreline .</p>
+                <div class="tree-planting-photo photo-area">
+                    <p>Planting area for mangrove trees in Bidesi park shoreline.</p>
                 </div>
                 <p>The trees were planted in the coastal wetlands of Bidesi park shoreline, a region that has seen significant ecological changes due to climate factors. The location is ideal for mangrove growth due to its proximity to seawater, which provides the necessary salinity for these trees. The rich, nutrient-filled soil and the tidal conditions further contribute to the thriving of mangroves in this area. This location offers protection from strong waves and provides an essential habitat for local wildlife.</p>
             </div>
 
             <div class="overview-content">
                 <h3>Suitability for Growth and Care</h3>
-                <div class="tree-planting-photo">
-                    <img src="treePlanting/place.jpg" alt="suitable planting area">
-                    <p>mud area where suitable for mangrove growth.</p>
+                <div class="tree-planting-photo photo-place">
+                    <p>Mud area where suitable for mangrove growth.</p>
                 </div>
                 <p>The site was chosen for its natural conditions favorable to mangrove growth, with minimal disturbances to the ecosystem. The area's low-lying, muddy shores allow mangrove trees to root well, and the fluctuating water levels help in the development of their specialized root systems. The area is also easily accessible for ongoing care and monitoring, ensuring the proper growth and sustainability of the planted trees.</p>
             </div>
         </div>
+    </div>
+</section>
+
 
         <!-- Group Photo -->
 
 
 
-        <div class="tree-planting-photo">
+<div class="tree-planting-photo">
 
-            <div class="image-block">
-                <img src="treePlanting/find_location.jpg" alt="spot">
-                <p>Finding spot for planting in Bidesi park shoreline.</p>
-            </div>
+    <div class="image-block image-find">
+        <p>Finding spot for planting in Bidesi park shoreline.</p>
+    </div>
 
-            <div class="image-block">
-                <img src="treePlanting/me_planting.jpg" alt="Me planting">
-                <p> me planting Bidesi park shoreline.</p>
-            </div>
-            <div class="image-block">
-                <img src="treePlanting/group.jpg" alt="Group planting mangrove trees">
-                <p>Our group planting the mangrove trees in Bidesi park shoreline.</p>
-            </div>
-            <div class="image-block">
-                <img src="treePlanting/planting.jpg" alt="Group planting mangrove trees">
-                <p>Our group planting the mangrove trees in Bidesi park shoreline.</p>
-            </div>
+    <div class="image-block image-me">
+        <p>Me planting Bidesi park shoreline.</p>
+    </div>
 
-        </div>
+    <div class="image-block image-group">
+        <p>Our group planting the mangrove trees in Bidesi park shoreline.</p>
+    </div>
+
+    <div class="image-block image-planting">
+        <p>Our group planting the mangrove trees in Bidesi park shoreline.</p>
+    </div>
+
+</div>
 
 <div class="feedback">
     <h2 >Some of the Participate Feedback</h2>
